// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge bg blue sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  background-color: #72b8fe;
  color: #FFF;
  background-color: #72b8fe;
}

<div
  className="c0"
/>
`;

exports[`Badge bg green sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  background-color: #13cf13;
  color: #FFF;
  background-color: #13cf13;
}

<div
  className="c0"
/>
`;

exports[`Badge bg lightBlue sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  background-color: #93c9ff;
  color: #1789fc;
  background-color: #93c9ff;
}

<div
  className="c0"
/>
`;

exports[`Badge bg lightGreen sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  background-color: #15e315;
  color: #0e9f0e;
  background-color: #15e315;
}

<div
  className="c0"
/>
`;

exports[`Badge bg lightRed sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  background-color: #ffafaf;
  color: #fe3f3f;
  background-color: #ffafaf;
}

<div
  className="c0"
/>
`;

exports[`Badge bg orange sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  background-color: #fe9c38;
  color: #131e1a;
  background-color: #fe9c38;
}

<div
  className="c0"
/>
`;

exports[`Badge bg red sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  background-color: #ff9595;
  color: #FFF;
  background-color: #ff9595;
}

<div
  className="c0"
/>
`;

exports[`Badge can escape preset: bg lightBlue sets background-color and color text sets color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  color: #131e1a;
  background-color: #93c9ff;
}

<div
  className="c0"
  color="text"
/>
`;

exports[`Badge non-preset: bg text sets background-color and color white sets color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  color: #FFF;
  background-color: #131e1a;
}

<div
  className="c0"
  color="white"
/>
`;

exports[`Badge renders 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  background-color: #EDF2E7;
  color: #131e1a;
}

<div
  className="c0"
/>
`;
